changed the crickets are climate smart div to a sentence instead of 3 weird bullets.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
     <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="{% static 'webapp/css/icomoon.css' %}">
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
     <!-- Superfish -->
@@ -155,14 +154,9 @@
                     <h3>Crickets are climate smart</h3>
                     <ul>
                         <li>
-                            <p>They need half the feed</p>
+                            <p>They need half the feed, 10 times less water than chickens, and you can raise a lot on very little land.</p>
                         </li>
-                        <li>
-                            <p>10 times less water than chickens</p>
-                        </li>
-                        <li>
-                            <p>Large volumes on a small area of land</p>
-                        </li>
+
                     </ul>
                 </div>
             </div>
