--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -47,26 +47,12 @@
         var ssrInfo = {"renderBodyTime": 327}
 
     </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HE4JEDR15P"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'G-HE4JEDR15P');
-    </script>
 
     <!--[if IE 6]>
     <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css?family=Roboto');
-</style>
+
 
 <body>
 <div id="header-wrapper">
@@ -154,7 +140,8 @@
                     <h3>Crickets are climate smart</h3>
                     <ul>
                         <li>
-                            <p>They need half the feed, 10 times less water than chickens, and you can raise a lot on very little land.</p>
+                            <p>They need half the feed, 10 times less water than chickens, and you can raise a lot on
+                                very little land.</p>
                         </li>
 
                     </ul>
@@ -179,193 +166,213 @@
                 </div>
             </div>
         </div>
+        <!--
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
+                        <h3>Organizational Values</h3>
+                        <p>
+                            • Divine intervention for positive transformation.<br>
 
-    </div>
-</div>
-<div class="row row-bottom-padded-md">
-    <div class="col-md-12">
-        <ul id="fh5co-portfolio-list">
-
-            <li class="two-third animate-box" data-animate-effect="fadeIn"
-                style="background-image: url({% static 'webapp/images/masked-group-sitting.webp' %}); ">
-                <a href="#" class="color-3">
-                    <div class="case-studies-summary">
-                        <span>Fight</span>
-                        <h2>Food shortages</h2>
+                            • Empowerment through education.
+                            • Timely response to human need and response to disaster.<br>
+                            • Respect to gender, disability, creed, race and any form of cultural diversity.
+                            • Transparent and competent human contribution
+                            • Teamwork, approachability, accessibility and dependability.
+                            • High business integrity, trust truth and love.
                     </div>
-                </a>
-            </li>
-
-            <li class="one-third animate-box" data-animate-effect="fadeIn"
-                style="background-image: url({% static 'webapp/images/best-insects-in-bowl.webp' %}); ">
-                <a href="#" class="color-4">
-                    <div class="case-studies-summary">
-                        <span>Highly</span>
-                        <h2>Nutritious</h2>
-                    </div>
-                </a>
-            </li>
-
-            <li class="one-third animate-box" data-animate-effect="fadeIn"
-                style="background-image: url({% static 'webapp/images/insect-protein.webp' %}); ">
-                <a href="#" class="color-5">
-                    <div class="case-studies-summary">
-                        <span>Lower</span>
-                        <h2>Water Consumption</h2>
-                    </div>
-                </a>
-            </li>
-            <li class="two-third animate-box" data-animate-effect="fadeIn"
-                style="background-image: url({% static 'webapp/images/children-esnath-bin.webp' %}); ">
-                <a href="#" class="color-6">
-                    <div class="case-studies-summary">
-                        <span>Demands</span>
-                        <h2>Less Labor</h2>
-                    </div>
-                </a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-4 col-md-offset-4 text-center animate-box">
-        <a href="{% url 'gallery' %}" class="btn btn-primary btn-lg">See Gallery</a>
-    </div>
-</div>
-
-<br><br>
-
-<div id="fh5co-content-section" class="fh5co-section-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-                <h3>Leadership</h3>
-                <p></p>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="fh5co-team text-center animate-box">
-                    <figure>
-                        <img src="{% static 'webapp/images/esnath-divasoni-cropped.webp' %}" alt="user">
-                    </figure>
-
-                    <div>
-                        <h3>Esnath Divasoni</h3>
-                        <p><span>Founder</span></p>
-                        <p></p>
-                    </div>
-
-                    <p class="fh5co-social-icons">
-                        <a href="#"><i class="icon-twitter2"></i></a>
-                        <a href="#"><i class="icon-linkedin2"></i></a>
-                        <a href="#"><i class="icon-facebook3"></i></a>
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="fh5co-team text-center animate-box">
-                    <figure>
-                        <img src="{% static 'webapp/images/lameck-marondera.webp' %}"
-                             alt="Children in Community">
-                    </figure>
-                    <div>
-                        <h3>Mr. Lameck Marondera</h3>
-                        <p><span>Director</span></p>
-                        <p></p>
-                    </div>
-                    <p class="fh5co-social-icons">
-                        <a href="#"><i class="icon-twitter2"></i></a>
-                        <a href="#"><i class="icon-linkedin2"></i></a>
-                        <a href="#"><i class="icon-facebook3"></i></a>
-                    </p>
                 </div>
             </div>
 
-
         </div>
+        -->
 
     </div>
-    <footer class="footer-distributed">
+    <div class="row row-bottom-padded-md">
+        <div class="col-md-12">
+            <ul id="fh5co-portfolio-list">
 
-        <div class="footer-left">
+                <li class="two-third animate-box" data-animate-effect="fadeIn"
+                    style="background-image: url({% static 'webapp/images/masked-group-sitting.webp' %}); ">
+                    <a href="#" class="color-3">
+                        <div class="case-studies-summary">
+                            <span>Fight</span>
+                            <h2>Food shortages</h2>
+                        </div>
+                    </a>
+                </li>
 
-            <h3>Glorified Community Empowerment<span>Trust</span></h3>
+                <li class="one-third animate-box" data-animate-effect="fadeIn"
+                    style="background-image: url({% static 'webapp/images/best-insects-in-bowl.webp' %}); ">
+                    <a href="#" class="color-4">
+                        <div class="case-studies-summary">
+                            <span>Highly</span>
+                            <h2>Nutritious</h2>
+                        </div>
+                    </a>
+                </li>
 
-            <p class="footer-links">
-                <a href="{% url 'index' %}">Home</a>
-                ·
-                <a href="{% url 'about' %}">Blog</a>
-                ·
-                <a href="{% url 'article:articles' %}">Blog</a>
-                ·
-                <a href="{% url 'gallery' %}">About</a>
-
-            </p>
-
-            <p class="footer-company-name">Miracle &copy; 2021</p>
+                <li class="one-third animate-box" data-animate-effect="fadeIn"
+                    style="background-image: url({% static 'webapp/images/insect-protein.webp' %}); ">
+                    <a href="#" class="color-5">
+                        <div class="case-studies-summary">
+                            <span>Lower</span>
+                            <h2>Water Consumption</h2>
+                        </div>
+                    </a>
+                </li>
+                <li class="two-third animate-box" data-animate-effect="fadeIn"
+                    style="background-image: url({% static 'webapp/images/children-esnath-bin.webp' %}); ">
+                    <a href="#" class="color-6">
+                        <div class="case-studies-summary">
+                            <span>Demands</span>
+                            <h2>Less Labor</h2>
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
+    </div>
 
-        <div class="footer-center">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center animate-box">
+            <a href="{% url 'gallery' %}" class="btn btn-primary btn-lg">See Gallery</a>
+        </div>
+    </div>
 
-            <div>
-                <i class="fa fa-map-marker"></i>
-                <p><span>126 Sturgess Cranborne</span>Harare, Zimbabwe</p>
+    <br><br>
+
+    <div id="fh5co-content-section" class="fh5co-section-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+                    <h3>Leadership</h3>
+                    <p></p>
+                </div>
             </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="fh5co-team text-center animate-box">
+                        <figure>
+                            <img src="{% static 'webapp/images/esnath-divasoni-cropped.webp' %}" alt="user">
+                        </figure>
 
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>+263 772 485 521</p>
-                <p>+263 774 741 688</p>
-            </div>
+                        <div>
+                            <h3>Esnath Divasoni</h3>
+                            <p><span>Founder</span></p>
+                            <p></p>
+                        </div>
 
-            <div>
-                <i class="fa fa-envelope"></i>
-                <p><a href="mailto:gcet.victors@gmail.com">gcet.victors@gmail.com</a></p>
+                        <p class="fh5co-social-icons">
+                            <a href="#"><i class="icon-twitter2"></i></a>
+                            <a href="#"><i class="icon-linkedin2"></i></a>
+                            <a href="#"><i class="icon-facebook3"></i></a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="fh5co-team text-center animate-box">
+                        <figure>
+                            <img src="{% static 'webapp/images/lameck-marondera.webp' %}"
+                                 alt="Children in Community">
+                        </figure>
+                        <div>
+                            <h3>Mr. Lameck Marondera</h3>
+                            <p><span>Director</span></p>
+                            <p></p>
+                        </div>
+                        <p class="fh5co-social-icons">
+                            <a href="#"><i class="icon-twitter2"></i></a>
+                            <a href="#"><i class="icon-linkedin2"></i></a>
+                            <a href="#"><i class="icon-facebook3"></i></a>
+                        </p>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
+        <footer class="footer-distributed">
 
-        <div class="footer-right">
+            <div class="footer-left">
 
-            <p class="footer-company-about">
-                <span>Our Partners</span>
-                The Resolution Project as the primary source of funding. As well as contribution from Sight and Life
-                -
-                Partners in nutrition. As well as the help of personal friends.
-            </p>
+                <h3>Glorified Community Empowerment<span>Trust</span></h3>
 
-            <div class="footer-icons">
+                <p class="footer-links">
+                    <a href="{% url 'index' %}">Home</a>
+                    ·
+                    <a href="{% url 'about' %}">Blog</a>
+                    ·
+                    <a href="{% url 'article:articles' %}">Blog</a>
+                    ·
+                    <a href="{% url 'gallery' %}">About</a>
 
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                </p>
+
+                <p class="footer-company-name">Miracle &copy; 2021</p>
+            </div>
+
+            <div class="footer-center">
+
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>126 Sturgess Cranborne</span>Harare, Zimbabwe</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+263 772 485 521</p>
+                    <p>+263 774 741 688</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:gcet.victors@gmail.com">gcet.victors@gmail.com</a></p>
+                </div>
 
             </div>
 
-        </div>
+            <div class="footer-right">
 
-    </footer>
+                <p class="footer-company-about">
+                    <span>Our Partners</span>
+                    The Resolution Project as the primary source of funding. As well as contribution from Sight and Life
+                    -
+                    Partners in nutrition. As well as the help of personal friends.
+                </p>
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <!-- jQuery Easing -->
-    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-    <!-- Bootstrap -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Waypoints -->
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/sticky.js' %}"></script>
+                <div class="footer-icons">
 
-    <!-- Stellar -->
-    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-    <!-- Superfish -->
-    <script src="{% static 'js/hoverIntent.js' %}"></script>
-    <script src="{% static 'js/superfish.js' %}"></script>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
 
-    <!-- Main JS -->
-    <script src="{% static 'js/main.js' %}"></script>
+                </div>
+
+            </div>
+
+        </footer>
+
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <!-- jQuery Easing -->
+        <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+        <!-- Bootstrap -->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <!-- Waypoints -->
+        <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+        <script src="{% static 'js/sticky.js' %}"></script>
+
+        <!-- Stellar -->
+        <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+        <!-- Superfish -->
+        <script src="{% static 'js/hoverIntent.js' %}"></script>
+        <script src="{% static 'js/superfish.js' %}"></script>
+
+        <!-- Main JS -->
+        <script src="{% static 'js/main.js' %}"></script>
 </body>
 
