--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -1,5 +1,7 @@
 /* Blue, green, brown as primary. Red, white, yellow as secondary.*/
 
+@import url("static/icomoon/icomoon.css");
+
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -487,8 +489,7 @@ ul.contact li a.icon-rss:before {
     width: 100%;
     height: 60px;
     background: #090f1b21;
-    position: fixed;
-!important;
+    position: fixed;!important;
     top: 0;
     left: 0;
     padding: 0 25px;
@@ -504,6 +505,7 @@ ul.contact li a.icon-rss:before {
 
 .navbar .hamburger {
     display: none;
+
 }
 
 .navbar .logo a {
