--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -1,14 +1,9 @@
 {% load compress %}
-{% load cache %}
-{% load pwa %}
 {% load static %}
 <!DOCTYPE HTML>
 <html lang="en">
 
 <head>
-
-{% compress js/css %}
-
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Jumping Protein</title>
@@ -22,20 +17,18 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="stylesheet" href="{% static 'icomoon/icomoon.css' %}"/>
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/style.css' %}"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
-    <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
-    <!-- Icomoon Icon Fonts-->
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
-    <!-- Superfish -->
-    <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
+        <link rel="stylesheet" href="{% static 'webapp/icomoon/icomoon.css' %}"/>
+        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/style.css' %}"/>
+        <link rel="stylesheet" href="{% static 'webapp/css/all.css' %}" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
+        <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
+        <!-- Icomoon Icon Fonts-->
+        <!-- Bootstrap  -->
+        <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
+        <!-- Superfish -->
+        <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
 
-    <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
-    {% endcompress %}
+        <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
@@ -357,23 +350,25 @@
             </div>
 
         </footer>
+        {% compress js %}
+            <script src="{% static 'js/jquery.min.js' %}"></script>
+            <!-- jQuery Easing -->
+            <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+            <!-- Bootstrap -->
+            <script src="{% static 'js/bootstrap.min.js' %}"></script>
+            <!-- Waypoints -->
+            <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+            <script src="{% static 'js/sticky.js' %}"></script>
 
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <!-- jQuery Easing -->
-        <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-        <!-- Bootstrap -->
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <!-- Waypoints -->
-        <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-        <script src="{% static 'js/sticky.js' %}"></script>
+            <!-- Stellar -->
+            <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+            <!-- Superfish -->
+            <script src="{% static 'js/hoverIntent.js' %}"></script>
+            <script src="{% static 'js/superfish.js' %}"></script>
 
-        <!-- Stellar -->
-        <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-        <!-- Superfish -->
-        <script src="{% static 'js/hoverIntent.js' %}"></script>
-        <script src="{% static 'js/superfish.js' %}"></script>
-
-        <!-- Main JS -->
-        <script src="{% static 'js/main.js' %}"></script>
+            <!-- Main JS -->
+            <script src="{% static 'js/main.js' %}"></script>
+            <script src="{% static 'js/all.js' %}"></script>
+        {% endcompress %}
 </body>
 
