--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -443,7 +443,6 @@ ul.contact li a.icon-rss:before {
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
     background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
-    background-size: 100vw;
     display: block;
     height: auto;
     width: 100%;
@@ -1549,7 +1548,7 @@ header {
 
 @media screen and (max-width: 768px) {
     .fh5co-cover {
-        heifght: inherit;
+        height: inherit;
         padding: 3em 0;
     }
 }
@@ -3200,7 +3199,7 @@ color: #fff
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
     .header-wrapper {
-        background-size: auto 1024px ;
+        background-size: cover;
     }
 
     .page-title, .page-description {
