--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -1,4 +1,5 @@
 {% extends 'webapp/base.html' %}
+{% load compress %}
 {% load pwa %}
 {% load cache %}
 {% load static %}
@@ -248,7 +249,7 @@
                 </div>
                 <div class="clear">
                 </div>
-
+{% compress js %}
                 <script src="{% static 'js/jquery.min.js' %}"></script>
                 <!-- jQuery Easing -->
                 <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
@@ -267,5 +268,5 @@
                 <!-- Main JS -->
                 <script src="{% static 'js/main.js' %}"></script>
 
-
+{% endcompress %}
 {% endblock content %}
