--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -443,6 +443,7 @@ ul.contact li a.icon-rss:before {
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
     background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background-size: cover;
     display: block;
     height: auto;
     width: 100%;
@@ -2992,7 +2993,6 @@ color: #fff
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(../images/hourglass.svg) center no-repeat #222222;
 }
 
 /*# sourceMappingURL=style.css.map */
@@ -3201,6 +3201,7 @@ color: #fff
     .header-wrapper {
         background-size: cover;
     }
+
 
     .page-title, .page-description {
         float: left;
