--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -72,7 +72,6 @@
             height: 500px;
             opacity: .8;
             background-color: rgb(30, 173, 255);
-            background-image: url('https://res.cloudinary.com/arpr/image/upload/v1541394028/architecture-building-campus-207684.jpg');
             background-size: cover;
             background-position: bottom;
         }
@@ -122,7 +121,7 @@
         <div class="mission">
 
             <div class="left">
-                <img src="{% static 'webapp/images/group-sitting.webp' %}">
+                <img src="{% static 'webapp/images/group-sitting.webp' %}" alt="Group sitting together">
             </div>
             <div class="right">
                 <h1>Background</h1>
@@ -223,7 +222,7 @@
 
                     </div>
                     <div class="right">
-                        <img src="{% static 'webapp/images/older-gentleman-buckets.webp' %}" alt="">
+                        <img src="{% static 'webapp/images/older-gentleman-buckets.webp' %}" alt="A man and a woman tending to the insects.">
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -232,7 +231,7 @@
                 <div class="mission">
 
                     <div class="left">
-                        <img src="{% static 'webapp/images/woman-tape-bowl.jpg' %}">
+                        <img src="{% static 'webapp/images/woman-tape-bowl.jpg' %}" alt="A woman tending to a tub that is meant for the insects.">
                     </div>
                     <div class="right">
                         <h1>How We Add Value</h1>
