removed source mapping from the various static files and made some hanges that wil hopefully help performance

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Jumping Protein</title>
     <meta name="title" content="Jumping Protein">
@@ -369,4 +368,4 @@
         <script src="{% static 'js/main.js' %}"></script>
         <script src="{% static 'js/all.js' %}"></script>
 </body>
-
+</html>
