CHANGED #HEADER-WRAPPER WIDTH TO 100VW FROM 100%. Also import package to views.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -428,7 +428,7 @@ ul.contact li a.icon-rss:before {
     background-size: cover;
     display: block;
     height: auto;
-    width: 100%;
+    width: 100vw;
     background-position-y: center;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
