--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load compress %}
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -15,6 +16,7 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
+    {% compress css %}
     <link rel="stylesheet" href="{% static 'webapp/icomoon/icomoon.css' %}"/>
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/style.css' %}"/>
     <link rel="stylesheet" href="{% static 'webapp/css/all.css' %}" crossorigin="anonymous"/>
@@ -27,6 +29,7 @@
     <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
 
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
+    {% endcompress %}
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
@@ -34,7 +37,7 @@
     <script type="text/javascript">
         var bodyCacheable = true;
 
-        var exclusionReason =
+        var exclusionReason =SETTINGS
             {"shouldRender": true, "forced": false};
         var ssrInfo = {"renderBodyTime": 327}
 
