added simple compress to try out in production and changed the header image to 100 vw and 30 vh. Simple changes. One at a time. Check it, continue.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -427,7 +427,7 @@ ul.contact li a.icon-rss:before {
     background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/crickets-in-hands-properly-blurred.webp") 50% 0 no-repeat;
     background-size: cover;
     display: block;
-    height: auto;
+    height: 30vh;
     width: 100vw;
     background-position-y: center;
     border-top-left-radius: 0px;
