readded the fontawesome cdn stylesheet and removed the preload from the css. Also deleted all.js. It was a large file that was really slowing things down. Added a few icons.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -15,16 +15,18 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-        <link rel="stylesheet" href="{% static 'webapp/icomoon/icomoon.css' %}"/>
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/style.css' %}"/>
-        <link rel="stylesheet" href="{% static 'webapp/css/all.css' %}" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
-        <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
-        <!-- Icomoon Icon Fonts-->
-        <!-- Bootstrap  -->
-        <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
-        <!-- Superfish -->
-        <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
+    <link rel="stylesheet" href="{% static 'webapp/icomoon/icomoon.css' %}"/>
+    <link rel="stylesheet" href="{% static 'webapp/css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'webapp/css/all.css' %}" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
+    <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
+    <!-- Font Awesome Icon Fonts-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
+    <!-- Superfish -->
+    <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
@@ -56,6 +58,7 @@
                 </div>
             </div>
             <div class="hamburger">
+                <span></span>
                 <i class="fas fa-bars">
 
                 </i>
