icons are correct on the index for the founders social pages.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -253,9 +253,9 @@
                         </div>
 
                         <p class="fh5co-social-icons">
-                            <a href="#"><i class="icon-twitter2"></i></a>
-                            <a href="#"><i class="icon-linkedin2"></i></a>
-                            <a href="#"><i class="icon-facebook3"></i></a>
+                            <a href="#"><i class="fab fa-facebook" style="color: #32381A"></i></a>
+                            <a href="#"><i class="fab fa-twitter"  style="color: #32381A"></i></a>
+                            <a href="#"><i class="fab fa-linkedin"  style="color: #32381A"></i></a>
                         </p>
                     </div>
                 </div>
@@ -271,9 +271,9 @@
                             <p></p>
                         </div>
                         <p class="fh5co-social-icons">
-                            <a href="#"><i class="icon-twitter2"></i></a>
-                            <a href="#"><i class="icon-linkedin2"></i></a>
-                            <a href="#"><i class="icon-facebook3"></i></a>
+                            <a href="#"><i class="fab fa-facebook" style="color: #32381A"></i></a>
+                            <a href="#"><i class="fab fa-twitter" style="color: #32381A"></i></a>
+                            <a href="#"><i class="fab fa-linkedin" style="color: #32381A"></i></a>
                         </p>
                     </div>
                 </div>
@@ -333,9 +333,9 @@
 
                 <div class="footer-icons">
 
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
 
                 </div>
 
