got rid of the style sheet links to all and icomoon css

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -15,9 +15,7 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="stylesheet" href="{% static 'webapp/icomoon/icomoon.css' %}"/>
     <link rel="stylesheet" href="{% static 'webapp/css/style.css' %}"/>
-    <link rel="stylesheet" href="{% static 'webapp/css/all.css' %}" crossorigin="anonymous"/>
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
     <!-- Font Awesome Icon Fonts-->
@@ -254,8 +252,8 @@
 
                         <p class="fh5co-social-icons">
                             <a href="#"><i class="fab fa-facebook" style="color: #32381A"></i></a>
-                            <a href="#"><i class="fab fa-twitter"  style="color: #32381A"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"  style="color: #32381A"></i></a>
+                            <a href="https://twitter.com/esnathmd"><i class="fab fa-twitter"  style="color: #32381A"></i></a>
+                            <a href="https://www.linkedin.com/in/esnath-divasoni-67220b8b/"><i class="fab fa-linkedin"  style="color: #32381A"></i></a>
                         </p>
                     </div>
                 </div>
