--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -15,7 +15,7 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="stylesheet" href="{% static 'webapp/css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'webapp/css/style.css.gz' %}"/>
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
     <!-- Font Awesome Icon Fonts-->
