getting rid of unused settings and added icons to the footer

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -310,18 +310,18 @@
             <div class="footer-center">
 
                 <div>
-                    <i class="fa fa-map-marker"></i>
+                    <i class="fab fa-map-marker"></i>
                     <p><span>126 Sturgess Cranborne</span>Harare, Zimbabwe</p>
                 </div>
 
                 <div>
-                    <i class="fa fa-phone"></i>
+                    <i class="fab fa-phone"></i>
                     <p>+263 772 485 521</p>
                     <p>+263 774 741 688</p>
                 </div>
 
                 <div>
-                    <i class="fa fa-envelope"></i>
+                    <i class="fab fa-envelope"></i>
                     <p><a href="mailto:gcet.victors@gmail.com">gcet.victors@gmail.com</a></p>
                 </div>
 
