updated the main about us to include the goals of the organization.

--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -97,6 +97,12 @@
                     all forms.
                     GCET is a mother organisation to: Jumping Protein, Crotchet consultancy, and GCET itself operates as
                     a charity organisation </p>
+                <p>
+                The Glorified Community Empowerment Trust is also mother organization to Crotchet Consultancy, and
+                     operates as its own charity organization. Our goals are to make progress toward an empowered
+                    African continent by the year 2040. This progress is made possible through successful business
+                    engagements by the marginalized, for the marginalized. Furthermore, we seek to establish flourishing
+                    strategic working partnerships for the needy by 2030. </p>
 
             </div>
             <div class="right">
@@ -210,7 +216,8 @@
 
                     </div>
                     <div class="right">
-                        <img src="{% static 'webapp/images/older-gentleman-buckets.webp' %}" alt="A man and a woman tending to the insects.">
+                        <img src="{% static 'webapp/images/older-gentleman-buckets.webp' %}"
+                             alt="A man and a woman tending to the insects.">
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -219,7 +226,8 @@
                 <div class="mission">
 
                     <div class="left">
-                        <img src="{% static 'webapp/images/woman-tape-bowl.jpg' %}" alt="A woman tending to a tub that is meant for the insects.">
+                        <img src="{% static 'webapp/images/woman-tape-bowl.jpg' %}"
+                             alt="A woman tending to a tub that is meant for the insects.">
                     </div>
                     <div class="right">
                         <h1>How We Add Value</h1>
