added esnath's social links to the footer

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -332,8 +332,8 @@
                 <div class="footer-icons">
 
                     <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/esnathmd"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/esnath-divasoni-67220b8b/"><i class="fab fa-linkedin"></i></a>
 
                 </div>
 
