--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -144,8 +144,8 @@
         <div class="footer-icons">
 
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://twitter.com/esnathmd"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/esnath-divasoni-67220b8b/"><i class="fa fa-linkedin"></i></a>
 
         </div>
 
