--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -18,7 +18,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
@@ -27,14 +27,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
-    <script type="text/javascript">
-        var bodyCacheable = true;
 
-        var exclusionReason =
-            {"shouldRender": true, "forced": false};
-        var ssrInfo = {"renderBodyTime": 327}
-
-    </script>
 
     <!--[if IE 6]>
     <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
