updated font of footer, changed link to developer website in footer.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -300,7 +300,7 @@
 
                 </p>
 
-                <p class="footer-company-name">Miracle &copy; 2021</p>
+                <p class="footer-company-name"><a href="https://jordanmiracle.com">Jordan Miracle &copy; 2021</a></p>
             </div>
 
             <div class="footer-center">
