--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -488,7 +488,7 @@ ul.contact li a.icon-rss:before {
     width: 100%;
     height: 60px;
     background: #090f1b21;
-    position: fixed;!important;
+    position: relative;
     top: 0;
     left: 0;
     padding: 0 25px;
@@ -528,7 +528,7 @@ ul.contact li a.icon-rss:before {
     display: block;
     text-align: center;
     padding: 1px;
-    border-radius: 25px;
+    border-radius: 15px 3px;
     color: #fff;
     text-transform: capitalize;
     font-size: 14px;
@@ -549,6 +549,7 @@ ul.contact li a.icon-rss:before {
 .navbar .current {
     background-color: #32381A;
     font-weight: bold;
+    border-radius: 25px 5px;
 }
 
 /*********************************************************************************/
@@ -912,7 +913,7 @@ footer {
 
 .footer-distributed h3 {
     color: #ffffff;
-    font: normal 36px 'Roboto Light', 'sans-serif';
+    font: normal 36px '', 'sans-serif';
     margin: 0;
 }
 
@@ -1034,7 +1035,7 @@ footer {
 
     .footer-distributed h3 {
         color: #ffffff;
-        font: normal 36px 'Roboto Light', 'sans-serif';
+        font: normal 36px 'Helvetica', 'sans-serif';
         margin: 0;
     }
 
